--- a/src/main/resources/templates/user/update_form.html
+++ b/src/main/resources/templates/user/update_form.html
@@ -79,7 +79,7 @@
           <form name="question" method="post" action="/users/{{id}}/update">
               <div class="form-group">
                   <label for="userId">사용자 아이디</label>
-                  <input class="form-control" id="userId" name="userId" placeholder="User ID" value="{{userId}}" disabled>
+                  <input class="form-control" id="userId" name="userId" placeholder="User ID" value="{{userId}}" readonly>
               </div>
               <div class="form-group">
                   <label for="password">비밀번호</label>
