--- a/src/main/resources/templates/user/update_form.html
+++ b/src/main/resources/templates/user/update_form.html
@@ -17,7 +17,7 @@
               </div>
               <div class="form-group">
                   <label for="password">비밀번호</label>
-                  <input type="password" class="form-control" id="password" name="password" placeholder="Password" value="{{password}}">
+                  <input type="password" class="form-control" id="password" name="password" placeholder="Password">
               </div>
               <div class="form-group">
                   <label for="name">이름</label>
