--- a/src/main/resources/templates/question/form.html
+++ b/src/main/resources/templates/question/form.html
@@ -11,8 +11,10 @@
       <div class="panel panel-default content-main">
           <form name="question" method="post" action="">
               <div class="form-group">
+                  {{#sessionedUser}}
                   <label for="writer">글쓴이</label>
-                  <input class="form-control" id="writer" name="writer" placeholder="글쓴이"/>
+                  <input class="form-control" id="writer" name="writer" placeholder="글쓴이" value="{{name}}"/>
+                  {{/sessionedUser}}
               </div>
               <div class="form-group">
                   <label for="title">제목</label>
