--- a/src/main/resources/templates/question/show.html
+++ b/src/main/resources/templates/question/show.html
@@ -30,11 +30,10 @@
                   <div class="article-doc">
                       <p>{{contents}}</p>
                   </div>
-                  {{/question}}
                   <div class="article-util">
                       <ul class="article-util-list">
                           <li>
-                              <a class="link-modify-article" href="/questions/423/form">수정</a>
+                              <a class="link-modify-article" href="/questions/{{id}}/form">수정</a>
                           </li>
                           <li>
                               <form class="form-delete" action="/questions/423" method="POST">
@@ -47,6 +46,7 @@
                           </li>
                       </ul>
                   </div>
+                  {{/question}}
               </article>
 
               <div class="qna-comment">
