--- a/src/main/resources/templates/question/update_form.html
+++ b/src/main/resources/templates/question/update_form.html
@@ -9,8 +9,9 @@
 <div class="container" id="main">
    <div class="col-md-12 col-sm-12 col-lg-10 col-lg-offset-1">
       <div class="panel panel-default content-main">
-          <form name="question" method="post" action="">
-              {{#question}}
+          {{#question}}
+          <form name="question" method="post" action="/questions/{{id}}/update">
+              <input type="hidden" name="_method" value="PUT" />
               <div class="form-group">
                   <label for="writer">글쓴이</label>
                   <input class="form-control" id="writer" name="writer" placeholder="글쓴이" value="{{writer}}"/>
@@ -25,8 +26,8 @@
               </div>
               <button type="submit" class="btn btn-success clearfix pull-right">질문하기</button>
               <div class="clearfix" />
-              {{/question}}
           </form>
+          {{/question}}
         </div>
     </div>
 </div>
