--- a/src/main/resources/templates/question/show.html
+++ b/src/main/resources/templates/question/show.html
@@ -36,13 +36,13 @@
                               <a class="link-modify-article" href="/questions/{{id}}/update">수정</a>
                           </li>
                           <li>
-                              <form class="form-delete" action="/questions/423" method="POST">
+                              <form class="form-delete" action="/questions/{{id}}/delete" method="POST">
                                   <input type="hidden" name="_method" value="DELETE">
                                   <button class="link-delete-article" type="submit">삭제</button>
                               </form>
                           </li>
                           <li>
-                              <a class="link-modify-article" href="/index.html">목록</a>
+                              <a class="link-modify-article" href="/">목록</a>
                           </li>
                       </ul>
                   </div>
