--- a/src/main/resources/templates/question/update_form.html
+++ b/src/main/resources/templates/question/update_form.html
@@ -14,7 +14,7 @@
               <input type="hidden" name="_method" value="PUT" />
               <div class="form-group">
                   <label for="writer">글쓴이</label>
-                  <input class="form-control" id="writer" name="writer" placeholder="글쓴이" value="{{writer}}"/>
+                  <input class="form-control" id="writer" name="writer.name" placeholder="글쓴이" value="{{writer.name}}"/>
               </div>
               <div class="form-group">
                   <label for="title">제목</label>
