--- a/src/main/resources/templates/question/form.html
+++ b/src/main/resources/templates/question/form.html
@@ -11,9 +11,10 @@
       <div class="panel panel-default content-main">
           <form name="question" method="post" action="">
               <div class="form-group">
-                  {{#sessionedUser}}
+                  {{^sessionedUser}}
+                  <input type="hidden" name="writer" value="{{sessionedUser}}">
                   <label for="writer">글쓴이</label>
-                  <input class="form-control" id="writer" name="writer" placeholder="글쓴이" value="{{name}}"/>
+                  <input class="form-control" id="writer" name="writer.name" placeholder="글쓴이" value="{{name}}"/>
                   {{/sessionedUser}}
               </div>
               <div class="form-group">
