--- a/src/main/resources/templates/question/show.html
+++ b/src/main/resources/templates/question/show.html
@@ -82,7 +82,7 @@
                               </div>
                           </article>
                           {{/answers}}
-                          <form class="submit-write" action="/questions/{{id}}/answers" method="POST">
+                          <form class="answer-write" action="/api/questions/{{id}}/answers" method="POST">
                               <div class="form-group" style="padding:14px;">
                                   <textarea class="form-control" name="contents" placeholder="Update your status"></textarea>
                               </div>
