--- a/src/main/resources/templates/question/show.html
+++ b/src/main/resources/templates/question/show.html
@@ -69,12 +69,14 @@
                               </div>
                               <div class="article-util">
                                   <ul class="article-util-list">
+                                      {{#equals sessionedUser writer}}
                                       <li>
                                           <a class="link-modify-article" href="/questions/413/answers/1405/form">수정</a>
                                       </li>
                                       <li>
                                           <a class="link-delete-article" href="/api/questions/{{question.id}}/answers/{{id}}">삭제 </a>
                                       </li>
+                                      {{/equals}}
                                   </ul>
                               </div>
                           </article>
